# zwse.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cliff.toml
.github/: _publish.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/checkout/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  publish.yml  test.yml
assets/: generate-assets.sh
examples/: write_minimal_fixture.rs
src/: cli.rs  error.rs  extract.rs  json_ptr.rs  lib.rs  main.rs  prelude.rs
src/sorting/: avx.rs  mod.rs  radix.rs  radix_simd.rs
tests/: export.rs
tests/fixtures/: minimal.jsonlz4
